# CrossUp

./: Blender Addon.txt  CMakeLists.txt  Makefile  Makefile_linux_playdate  Makefile_linux_raylib  Makefile_playdate  Makefile_raylib  README.md  link_map.ld  makedev.bat  makesim.bat  map1.blend  map1.blend1  msys2.txt
3D Blender Models/: Chicken Model.blend  Chicken Model.blend1
C/: collisions.c  collisions.h  draw.c  draw.h  entities.c  entities.h  library.c  library.h  main.c  movement.c  movement.h  pdxinfo  structs.h  syscall.c
C/Foxgine/: _3DMATH.h  _3DMath.c  _3DMath.h  collisions.c  collisions.h  engine.c  engine.h  entities.c  entities.h  libEngine.h
C/Objects/: allMeshes.h  animData.h  arm.h  cube.h  map.h  mesh.h  tri.h
C/allFiles/: draw.c  draw.h  library.c  library.h  mesh.h  structs.h
C/playdate/: draw.c  libRay.h  main.c  meshConvert.c  meshConvert.h  movement.c  movement.h  profiler.c  profiler.h
C/raylib/: collisions.h  draw.c  draw.h  libRay.h  main.c  meshConvert.c  meshConvert.h  movement.c  movement.h
Computer/: Makefile  msys2.txt  save.txt
Computer/C/: 3DMath.c  3DMath.h  _3DMATH.h  _3DMath.c  collisions.c  collisions.h  (+13 more)
CrossUp-dev/: pdex.elf  pdxinfo
CrossUp-dev.pdx/: main.pdz  pdxinfo
CrossUp-sim.pdx/: pdxinfo
CrossUp.pdx/: main.pdz  pdxinfo
Models/: map.bbmodel
Playdate/: makedev.bat  makesim.bat
Python Script/: draw.py  main.py  model.h  model.json  model_export.json
Source/: main.lua  network.lua  pdex.elf  pdxinfo
device_build/: game.map  pdex.elf  pdex_unstripped.elf
image converter/: idle.fox  main.py
save_elf/: pdex.elf  pdex_unstripped.elf
(+84 files in other folders)
